--- a/CSS/all.css
+++ b/CSS/all.css
@@ -30,6 +30,7 @@ body{
 .logo{
     text-transform: uppercase;
     letter-spacing: 4px;
+    opacity: 0.7;
 }   .logo a{
         width: 88px;
         height: 33px;
@@ -38,7 +39,12 @@ body{
             width: 100%;
             height: 100%;
             object-fit: contain;
-        }
+        }   .logo:hover{
+                opacity: 1;
+                transition: 0.25s;
+            }
+
+
         
 .links-1{
         display: flex;
@@ -55,13 +61,7 @@ body{
                 color: black;
                 Border-radius: 18px;
             }
-.logo{
-    opacity: 0.7;
-}
-.logo:hover{
-    opacity: 1;
-    transition: 0.25s;
-}
+
 /* END Header */
 
 .background{
@@ -414,16 +414,24 @@ footer{
         .head{
             height: 8vh;
         }
+        .blog{
+            margin:0;
+            max-width: 100%;
+        }
         #post { 
             display: none;
         }
+        .logo{
+            opacity: 1;
+        }
         .content{
-            display: none;
+            width: 100%;
         }
         .footer-col{
             font-size: 12px;
             padding: 0;
         }
+        
         .content-blog{
             display: inline-block;
         }
