--- a/CSS/all.css
+++ b/CSS/all.css
@@ -416,7 +416,7 @@ footer{
         }
         .blog{
             margin:0;
-            max-width: 100%;
+            max-width: 100vw;
         }
         #post { 
             display: none;
