--- a/CSS/all.css
+++ b/CSS/all.css
@@ -32,8 +32,8 @@ body{
     letter-spacing: 4px;
     opacity: 0.7;
 }   .logo a{
-        width: 88px;
-        height: 33px;
+        max-width: 88px;
+        max-height: 33px;
         float: left;
     }   .logo a img{
             width: 100%;
@@ -417,6 +417,7 @@ footer{
         .blog{
             margin:0;
             max-width: 100vw;
+            max-heigth: 100%;
         }
         #post { 
             display: none;
@@ -427,9 +428,6 @@ footer{
         .footer-col{
             font-size: 12px;
             padding: 0;
-        }
-        .blog{
-            max-width: 100%;
         }
         
         .content-blog{
