--- a/CSS/all.css
+++ b/CSS/all.css
@@ -77,7 +77,7 @@ body{
 .blog{
     background-color: rgba(56, 56, 56, 0.83);
     width: 1000px;
-    max-height: 5000px;
+    max-height: 100%;
     margin-left: 5%;
     margin-right: 1%;
     border-radius: 12px;
